--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,14 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'org.jetbrains.kotlin.kapt'
 }
 
 android {
+    kapt {
+        generateStubs = true
+    }
+
     namespace 'com.example.wallpapergenerator'
     compileSdk 33
 
@@ -36,9 +41,10 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.dagger:dagger:2.45'
+    kapt 'com.google.dagger:dagger-compiler:2.45'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-
     implementation 'com.google.android.material:material:1.9.0-alpha02'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
