--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -14,6 +15,15 @@
         android:theme="@style/Theme.WallpaperGenerator"
         tools:targetApi="31">
         <activity
+            android:name=".AuthActivity"
+            android:exported="false"
+            android:label="@string/title_activity_auth"
+            android:theme="@style/Theme.WallpaperGenerator.NoActionBar" />
+        <activity
+            android:name=".testActivity"
+            android:exported="false"
+            android:label="@string/title_activity_test" />
+        <activity
             android:name=".GalleryActivity"
             android:exported="false"
             android:label="@string/title_activity_gallery"
@@ -23,9 +33,6 @@
             android:exported="false" />
         <activity
             android:name=".RegistrationActivity"
-            android:exported="false" />
-        <activity
-            android:name=".AuthorizationActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
