--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.github.furkankaplan:fk-blur-view-android:1.0.1'
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.15.+"
     implementation 'com.google.dagger:dagger:2.45'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.0'
